--- a/Nexal_Assignment.html
+++ b/Nexal_Assignment.html
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <img style="margin-top: -10%;" src="catalogue.png" alt="">
+                <img style="margin-top: -10%;" src="catalogue.png" width="100%" height="40%" alt="">
                 <h2 class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
                 <p  class="my-4">Ullam corrupti quidem enim explicabo est beatae illum sequi ratione vitae, incidunt nesciunt, nam deleniti maxime assumenda fuga suscipit, eos doloremque distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ratione aperiam vero, ab ea, doloribus reiciendis nam, voluptatem sequi earum explicabo ex commodi laudantium eligendi consequuntur! Ducimus ratione nihil est.</p>
                 <p class="my-4"><b> Ullam corrupti quidem enim explicabo est</b></p>
